update to lphybeast launcher for successful dependencies